--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
 					  <ul>
 						 <li class="has-sub"><a href="#"><span>Plants</span></a>
 							<ul>
-							   <li><a href="#"><span>Sub Item</span></a></li>
-							   <li class="last"><a href="#"><span>Sub Item</span></a></li>
+							   <li><a href="#"><span>Apple</span></a></li>
+							   <li class="last"><a href="#"><span>Lemon</span></a></li>
 							</ul>
 						 </li>
 						 <li class="has-sub"><a href="#"><span>Seeds</span></a>
 							<ul>
-							   <li><a href="#"><span>Sub Item</span></a></li>
-							   <li class="last"><a href="#"><span>Sub Item</span></a></li>
+							   <li><a href="#"><span>Apple</span></a></li>
+							   <li class="last"><a href="#"><span>Lemon</span></a></li>
 							</ul>
 						 </li>
 					  </ul>
@@ -634,7 +634,7 @@
 											</div>
 											<div class="sm-2-3 t-left-sm">
 												<h3>Address</h3>
-												<p>123, New Lenox Chicago, IL 60606</p>
+												<p>3-99, F501, Kanakamaha Lakshmi enclave, Yendada, Visakhapatnam, 530045</p>
 											</div>
 										</div>
 									</div>
@@ -647,7 +647,8 @@
 											</div>
 											<div class="sm-2-3 t-left-sm">
 												<h3>Phone</h3>
-												<p>Carteret NJ 0708 (732) 803-01 03, (732) 806-01 04</p>
+												<p>Phone One: +91 83414 82788</p>
+												<p>Phone Two: +91 89194 62236</p>
 											</div>
 										</div>
 									</div>
@@ -660,7 +661,7 @@
 											</div>
 											<div class="sm-2-3 t-left-sm">
 												<h3>Email</h3>
-												<p><span>Email One :</span> info@yoursite.com </p>
+												<p><span>Email One :</span> suryamgardens@gmail.com </p>
 											</div>
 										</div>
 									</div>
